# napari-labelimg4classification

./: LICENSE  README.md  mkdocs.yml  setup.cfg  tox.ini
.napari/: config.yml
docs/: index.md
src/napari_labelimg4classification/: __init__.py  _dock_widget.py
src/napari_labelimg4classification/_tests/: test_dock_widget.py
