[metadata]
name = napari-labelimg4classification
version = 0.1.1
author = Hiroki Kawai
author_email = h.kawai888@gmail.com
url = https://github.com/hiroalchem/napari-labelimg4classification
license = MIT
description = Image-Level labeling tool
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
project_urls =
    Bug Tracker = https://github.com/hiroalchem/napari-labelimg4classification/issues
    Documentation = https://github.com/hiroalchem/napari-labelimg4classification#README.md
    Source Code = https://github.com/hiroalchem/napari-labelimg4classification
    User Support = https://github.com/hiroalchem/napari-labelimg4classification/issues

[options]
packages = find:
python_requires = >=3.7
package_dir =
    =src
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    napari
    numpy
    napari-tools-menu
    pandas

[options.packages.find]
where = src

[options.entry_points] 
napari.plugin = 
    napari-labelimg4classification = napari_labelimg4classification
